Added the "Go Back" button at bottom of card

--- a/Result.cshtml
+++ b/Result.cshtml
@@ -20,6 +20,9 @@
                 <h4 class="text-center">Favorite Language: @ViewBag.FavLanguage</h4>
                 <h4 class="text-center">Comment: @ViewBag.Comment</h4>
             </div>
+            <a href="http://localhost:5000">
+                <button class="btn btn-warning">Go Back</button>
+            </a>
         </div>
     </div>
 </body>
